--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,25 @@
     <packaging>zip</packaging>
     <name>Simple Multi Modules Build</name>
 
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>   
+     <build>
+    <plugins>
+      <plugin>       
+        <executions>
+          <execution>
+            <id>add-source</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>ww.zip</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+    
 </project>
